--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <div class="table__cell">
             <h4 class="table__heading">2,1 миллиарда</h4>
-            <p class="table__text">Число нуждающихся в повышении квалификации<br><span class="table__text-source">Всемирный Банк,2017</span></p>
+            <p class="table__text">Число нуждающихся в повышении квалификации<span class="table__text-source">Всемирный Банк,2017</span></p>
           </div>
           <div class="table__cell">
             <h4 class="table__heading">1000 терабайт</h4>
@@ -56,7 +56,7 @@
           </div>
           <div class="table__cell">
             <h4 class="table__heading">420 миллионов</h4>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройтсва<br><span class="table__text-source">Всемирный Банк,2017</span></p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройтсва<span class="table__text-source">Всемирный Банк,2017</span></p>
           </div>
           <div class="table__cell">
             <h4 class="table__heading">17-20 лет</h4>
@@ -145,9 +145,9 @@
         <div class="footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="icon">Facebook</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="icon">ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="icon">Instagram</a></li>
+            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="логотип">Facebook</a></li>
+            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="логотип">ВКонтакте</a></li>
+            <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="логотип">Instagram</a></li>
           </ul>
         </div>
       </div>
