--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img class="logo logo_place_header" src="images/logo/_place/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link" href="#">Узнать &#8594;</a></p>
+        <a class="header__link transparency-link" href="#">Узнать &#8594;</a></p>
       <div class="header__main-illustration"></div>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -32,6 +31,65 @@
               его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards/__image/cards-attention.png" alt="Изображение книги">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards/__image/cards-recall.png" alt="Изображение статуи">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards/__image/cards-interliving.png" alt="Изображение станции метро">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards/__image/cards-question.png" alt="Изображение библиотеки Штутгарта">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards/__image/cards-competence.png" alt="Изображение стопки книг">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
+              причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули
+               в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам.
+                Оказалось, если вам что-то &#171;плохо даётся&#187;, ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link transparency-link" href="#">Подробнее &#8594;</a>
       </section>
 
       <section class="digits">
@@ -73,10 +131,21 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman_link" href="#">Подробнее &#8594;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир - Школа</h2>
+          <blockquote class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу &#171;Весь мир - Школа&#187; нужно прочитать всем, кто занимается образованием
+            - так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic"></div>
+            <a class="khan__buy-link transparency-link" href="#">Купить книгу &#8594;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -124,30 +193,41 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-arzamas.svg" alt="Arzama"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-n1.svg" alt="N+1"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-strelka.svg" alt="STRELKA"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-polka.svg" alt="ПОЛКА"></a></li>
+        </ul>
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+          <img class="logo logo_place_footer" src="images/logo/_place/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
           <address class="footer__author">&#169; 2021. Михаил Олейник</address>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">Главная</a></li>
-            <li><a class="footer__column-link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link transparency-link" href="#">Главная</a></li>
+            <li><a class="footer__column-link transparency-link" href="#">Концепция</a></li>
+            <li><a class="footer__column-link transparency-link" href="#">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
-              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="логотип">Facebook</a></li>
-              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="логотип">ВКонтакте</a></li>
-              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="логотип">Instagram</a></li>
+              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/footer/__social-icon/facebook_color_white.svg" alt="логотип">Facebook</a></li>
+              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/footer/__social-icon/vk_color_white.svg" alt="логотип">ВКонтакте</a></li>
+              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/footer/__social-icon/instagram_color_white.svg" alt="логотип">Instagram</a></li>
             </ul>
         </nav>
       </div>
