Альтернативный текст на языке страницы

--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфаках обучения</p>
         <ul class="resources__logo-zone">
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-arzamas.svg" alt="Arzama"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-n1.svg" alt="N+1"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-strelka.svg" alt="STRELKA"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-polka.svg" alt="ПОЛКА"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-arzamas.svg" alt="Логотип"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-n1.svg" alt="Логотип"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-strelka.svg" alt="Логотип"></a></li>
+          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-polka.svg" alt="Логотип"></a></li>
         </ul>
       </section>
     </main>
