--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="images/logo/_place/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+      <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link transparency-link" href="#">Узнать &#8594;</a></p>
@@ -38,27 +38,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img class="cards__image" src="images/cards/__image/cards-attention.png" alt="Изображение книги">
+            <img class="cards__image" src="images/cards-attention.png" alt="Изображение книги">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards/__image/cards-recall.png" alt="Изображение статуи">
+            <img class="cards__image" src="images/cards-recall.png" alt="Изображение статуи">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards/__image/cards-interliving.png" alt="Изображение станции метро">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Изображение станции метро">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards/__image/cards-question.png" alt="Изображение библиотеки Штутгарта">
+            <img class="cards__image" src="images/cards-question.png" alt="Изображение библиотеки Штутгарта">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards/__image/cards-competence.png" alt="Изображение стопки книг">
+            <img class="cards__image" src="images/cards-competence.png" alt="Изображение стопки книг">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -200,10 +200,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфаках обучения</p>
         <ul class="resources__logo-zone">
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-arzamas.svg" alt="Логотип"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-n1.svg" alt="Логотип"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-strelka.svg" alt="Логотип"></a></li>
-          <li><a class="resources__link" href="#"><img class="resources__logo" src="/images/resources/__logo/resources-polka.svg" alt="Логотип"></a></li>
+          <li><a class="resources__link transparency-link" href="#"><img class="resources__logo" src="images/resources-arzamas.svg" alt="Логотип"></a></li>
+          <li><a class="resources__link transparency-link" href="#"><img class="resources__logo" src="images/resources-n1.svg" alt="Логотип"></a></li>
+          <li><a class="resources__link transparency-link" href="#"><img class="resources__logo" src="images/resources-strelka.svg" alt="Логотип"></a></li>
+          <li><a class="resources__link transparency-link" href="#"><img class="resources__logo" src="images/resources-polka.svg" alt="Логотип"></a></li>
         </ul>
       </section>
     </main>
@@ -211,7 +211,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="images/logo/_place/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+          <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
           <address class="footer__author">&#169; 2021. Михаил Олейник</address>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -225,9 +225,9 @@
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
-              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/footer/__social-icon/facebook_color_white.svg" alt="логотип">Facebook</a></li>
-              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/footer/__social-icon/vk_color_white.svg" alt="логотип">ВКонтакте</a></li>
-              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/footer/__social-icon/instagram_color_white.svg" alt="логотип">Instagram</a></li>
+              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="логотип">Facebook</a></li>
+              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="логотип">ВКонтакте</a></li>
+              <li><a class="footer__column-link transparency-link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="логотип">Instagram</a></li>
             </ul>
         </nav>
       </div>
