--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link transparency-link" href="#">Узнать &#8594;</a></p>
+        <a class="header__link transparency-link" href="#">Узнать &rarr;</a></p>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic rotation"></div>
     </header>
@@ -36,33 +36,33 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="Изображение книги">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-recall.png" alt="Изображение статуи">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-interliving.png" alt="Изображение станции метро">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-question.png" alt="Изображение библиотеки Штутгарта">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-competence.png" alt="Изображение стопки книг">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="video">
@@ -89,7 +89,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link transparency-link" href="#">Подробнее &#8594;</a>
+        <a class="feynman__link transparency-link" href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -102,7 +102,8 @@
           </li>
           <li class="table__cell">
             <h4 class="table__heading">2,1 миллиарда</h4>
-            <p class="table__text">Число нуждающихся в повышении квалификации<span class="table__text-source">Всемирный Банк,2017</span></p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк,2017</p>
           </li>
           <li class="table__cell">
             <h4 class="table__heading">1000 терабайт</h4>
@@ -114,7 +115,8 @@
           </li>
           <li class="table__cell">
             <h4 class="table__heading">420 миллионов</h4>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройтсва<span class="table__text-source">Всемирный Банк,2017</span></p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройтсва</p>
+            <p class="table__text">Всемирный Банк,2017</p>
           </li>
           <li class="table__cell">
             <h4 class="table__heading">17-20 лет</h4>
@@ -142,8 +144,8 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic"></div>
-            <a class="khan__buy-link transparency-link" href="#">Купить книгу &#8594;</a>
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="&Prime;Весь мир - школа. Преобразованное образование&Prime; (Хан Салман)">
+            <a class="khan__buy-link transparency-link" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
